GitOps/apps/base/bugbug-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bugbug-website
spec:
  selector:
    matchLabels:
      app: bugbug-website
  template:
    metadata:
      labels:
        app: bugbug-website
    spec:
      containers:
        - name: bugbug-website
          image: bugbug-website:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          # envFrom:
          #   - secretRef:
          #       name: db-credentials
