GitOps/apps/base/bugbug-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugbug-website
spec:
  selector:
    app: bugbug-website
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
