GitOps/apps/base/bugbug-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugbug-website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: placeholder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bugbug-website
            port:
              number: 80
